somini: My Own Personal Tweaks

--- a/settings.ini
+++ b/settings.ini
@@ -35,7 +35,7 @@ Settings.ini
    // Fix for those experiencing truncated game headers in the Library Details view.
    // To enable this, delete the 2 forward slashes " // " at the start of the following line:
 
-	//include "resource/styles/tweaks/fix_tgh.styles"
+	include "resource/styles/tweaks/fix_tgh.styles"
 
 
 
@@ -68,7 +68,7 @@ Settings.ini
    // Using this tweak will significantly increase the size of text throughout the skin.
    // To enable this, delete the 2 forward slashes " // " at the start of the following line:
 
-	//include "resource/styles/tweaks/fs_larges.styles"
+	include "resource/styles/tweaks/fs_larges.styles"
 
 
 
@@ -116,7 +116,7 @@ Settings.ini
    // Keep in mind that some games/notifications will override these settings.
    // To enable this, delete the 2 forward slashes " // " at the start of the following line:
 
-	//include "resource/styles/tweaks/not_toprt.styles"
+	include "resource/styles/tweaks/not_toprt.styles"
 
 
 
@@ -144,7 +144,7 @@ Settings.ini
    // Using this tweak will remove the black underline from beneath the game title in the Library.
    // To enable this, delete the 2 forward slashes " // " at the start of the following line:
 
-	//include "resource/styles/tweaks/gametitle_ul_tweak.styles"
+	include "resource/styles/tweaks/gametitle_ul_tweak.styles"
 
 
 
@@ -162,7 +162,7 @@ Settings.ini
    // Using this tweak will cause all games currently not installed to appear faded in the Grid view.
    // To enable this, delete the 2 forward slashes " // " at the start of the following line:
 
-	//include "resource/styles/tweaks/gamegrid_al_tweak.styles"
+	include "resource/styles/tweaks/gamegrid_al_tweak.styles"
 
 
 
@@ -184,7 +184,7 @@ Settings.ini
    // the traditional single-colour background (38% black).
    // To enable this, delete the 2 forward slashes " // " at the start of the following line:
 
-	//include "resource/styles/tweaks/ol_bg_traditional.styles"
+	include "resource/styles/tweaks/ol_bg_traditional.styles"
 
 
 
